// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Table Alignment 1`] = `
<div
  data-css-f3t1g9=""
>
  <table
    data-css-9fiqqd=""
    role="grid"
  >
    <thead
      data-css-1ts1rl3=""
    >
      <tr
        data-css-v3use0=""
        role="row"
      >
        <th
          data-css-1c7qoga=""
          role="columnheader"
          scope="col"
        >
          Align Left
        </th>
        <th
          data-css-1qf9mo3=""
          role="columnheader"
          scope="col"
        >
          Align center
        </th>
        <th
          data-css-av945f=""
          role="columnheader"
          scope="col"
        >
          Align right
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        data-css-v3use0=""
        role="row"
      >
        <th
          data-css-1c7qoga=""
          role="rowheader"
          scope="row"
        >
          Enrico
        </th>
        <td
          data-css-rg0vl=""
          role="gridcell"
        >
          VonRueden
        </td>
        <td
          data-css-486wol=""
          role="gridcell"
        >
          Helen_Schmeler@yahoo.com
        </td>
      </tr>
      <tr
        data-css-v3use0=""
        role="row"
      >
        <th
          data-css-1c7qoga=""
          role="rowheader"
          scope="row"
        >
          Brittany
        </th>
        <td
          data-css-rg0vl=""
          role="gridcell"
        >
          Leuschke
        </td>
        <td
          data-css-486wol=""
          role="gridcell"
        >
          Yasmeen49@hotmail.com
        </td>
      </tr>
      <tr
        data-css-v3use0=""
        role="row"
      >
        <th
          data-css-1c7qoga=""
          role="rowheader"
          scope="row"
        >
          Eva
        </th>
        <td
          data-css-rg0vl=""
          role="gridcell"
        >
          Jacobs
        </td>
        <td
          data-css-486wol=""
          role="gridcell"
        >
          Birdie0@hotmail.com
        </td>
      </tr>
      <tr
        data-css-v3use0=""
        role="row"
      >
        <th
          data-css-1c7qoga=""
          role="rowheader"
          scope="row"
        >
          Erich
        </th>
        <td
          data-css-rg0vl=""
          role="gridcell"
        >
          Dach
        </td>
        <td
          data-css-486wol=""
          role="gridcell"
        >
          Hubert_Welch@yahoo.com
        </td>
      </tr>
      <tr
        data-css-v3use0=""
        role="row"
      >
        <th
          data-css-1c7qoga=""
          role="rowheader"
          scope="row"
        >
          Baron
        </th>
        <td
          data-css-rg0vl=""
          role="gridcell"
        >
          Beer
        </td>
        <td
          data-css-486wol=""
          role="gridcell"
        >
          Derrick_Raynor@yahoo.com
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots Components/Table Basic 1`] = `
<div
  data-css-f3t1g9=""
>
  <table
    data-css-9fiqqd=""
    role="grid"
  >
    <thead
      data-css-1ts1rl3=""
    >
      <tr
        data-css-v3use0=""
        role="row"
      >
        <th
          data-css-1c7qoga=""
          role="columnheader"
          scope="col"
        >
          First name
        </th>
        <th
          data-css-1c7qoga=""
          role="columnheader"
          scope="col"
        >
          Last name
        </th>
        <th
          data-css-1c7qoga=""
          role="columnheader"
          scope="col"
        >
          Email
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        data-css-v3use0=""
        role="row"
      >
        <th
          data-css-1c7qoga=""
          role="rowheader"
          scope="row"
        >
          Adolphus
        </th>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Donnelly
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Braulio_Rempel33@hotmail.com
        </td>
      </tr>
      <tr
        data-css-v3use0=""
        role="row"
      >
        <th
          data-css-1c7qoga=""
          role="rowheader"
          scope="row"
        >
          Krystal
        </th>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          MacGyver
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Kacey7@yahoo.com
        </td>
      </tr>
      <tr
        data-css-v3use0=""
        role="row"
      >
        <th
          data-css-1c7qoga=""
          role="rowheader"
          scope="row"
        >
          Aglae
        </th>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Greenholt
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Vivianne.Johnson79@hotmail.com
        </td>
      </tr>
      <tr
        data-css-v3use0=""
        role="row"
      >
        <th
          data-css-1c7qoga=""
          role="rowheader"
          scope="row"
        >
          Vladimir
        </th>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          White
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Beaulah_Douglas@yahoo.com
        </td>
      </tr>
      <tr
        data-css-v3use0=""
        role="row"
      >
        <th
          data-css-1c7qoga=""
          role="rowheader"
          scope="row"
        >
          Hillard
        </th>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Bauch
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Michelle_OConnell58@hotmail.com
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots Components/Table Mixed Content 1`] = `
<div
  data-css-f3t1g9=""
>
  <table
    data-css-9fiqqd=""
    role="grid"
  >
    <thead
      data-css-1ts1rl3=""
    >
      <tr
        data-css-v3use0=""
        role="row"
      >
        <th
          data-css-1c7qoga=""
          role="columnheader"
          scope="col"
        >
          First name
        </th>
        <th
          data-css-1c7qoga=""
          role="columnheader"
          scope="col"
        >
          Last name
        </th>
        <th
          data-css-1c7qoga=""
          role="columnheader"
          scope="col"
        >
          Email
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        data-css-v3use0=""
        role="row"
      >
        <th
          data-css-1c7qoga=""
          role="rowheader"
          scope="row"
        >
          <div
            style={
              Object {
                "alignItems": "center",
                "display": "flex",
              }
            }
          >
            <div
              data-css-79vgce=""
            >
              <div
                aria-label="Darien"
                data-css-1h1qs66=""
                style={
                  Object {
                    "backgroundColor": "#009380",
                  }
                }
              >
                D
              </div>
            </div>
            <div
              style={
                Object {
                  "display": "inline-block",
                  "width": "12px",
                }
              }
            />
            <span>
              Darien
            </span>
          </div>
        </th>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Romaguera
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Kathryn91@gmail.com
        </td>
      </tr>
      <tr
        data-css-v3use0=""
        role="row"
      >
        <th
          data-css-1c7qoga=""
          role="rowheader"
          scope="row"
        >
          <div
            style={
              Object {
                "alignItems": "center",
                "display": "flex",
              }
            }
          >
            <div
              data-css-79vgce=""
            >
              <div
                aria-label="Libby"
                data-css-1h1qs66=""
                style={
                  Object {
                    "backgroundColor": "#0074AB",
                  }
                }
              >
                L
              </div>
            </div>
            <div
              style={
                Object {
                  "display": "inline-block",
                  "width": "12px",
                }
              }
            />
            <span>
              Libby
            </span>
          </div>
        </th>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Treutel
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Rogelio.Kuhic@hotmail.com
        </td>
      </tr>
      <tr
        data-css-v3use0=""
        role="row"
      >
        <th
          data-css-1c7qoga=""
          role="rowheader"
          scope="row"
        >
          <div
            style={
              Object {
                "alignItems": "center",
                "display": "flex",
              }
            }
          >
            <div
              data-css-79vgce=""
            >
              <div
                aria-label="Myrna"
                data-css-1h1qs66=""
                style={
                  Object {
                    "backgroundColor": "#008F46",
                  }
                }
              >
                M
              </div>
            </div>
            <div
              style={
                Object {
                  "display": "inline-block",
                  "width": "12px",
                }
              }
            />
            <span>
              Myrna
            </span>
          </div>
        </th>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Bernier
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Bridget23@yahoo.com
        </td>
      </tr>
      <tr
        data-css-v3use0=""
        role="row"
      >
        <th
          data-css-1c7qoga=""
          role="rowheader"
          scope="row"
        >
          <div
            style={
              Object {
                "alignItems": "center",
                "display": "flex",
              }
            }
          >
            <div
              data-css-79vgce=""
            >
              <div
                aria-label="Darrell"
                data-css-1h1qs66=""
                style={
                  Object {
                    "backgroundColor": "#B28300",
                  }
                }
              >
                D
              </div>
            </div>
            <div
              style={
                Object {
                  "display": "inline-block",
                  "width": "12px",
                }
              }
            />
            <span>
              Darrell
            </span>
          </div>
        </th>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Stamm
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Bruce_Bartell@gmail.com
        </td>
      </tr>
      <tr
        data-css-v3use0=""
        role="row"
      >
        <th
          data-css-1c7qoga=""
          role="rowheader"
          scope="row"
        >
          <div
            style={
              Object {
                "alignItems": "center",
                "display": "flex",
              }
            }
          >
            <div
              data-css-79vgce=""
            >
              <div
                aria-label="Damon"
                data-css-1h1qs66=""
                style={
                  Object {
                    "backgroundColor": "#B28300",
                  }
                }
              >
                D
              </div>
            </div>
            <div
              style={
                Object {
                  "display": "inline-block",
                  "width": "12px",
                }
              }
            />
            <span>
              Damon
            </span>
          </div>
        </th>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Goyette
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Luisa.Nader53@yahoo.com
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots Components/Table Row Selection 1`] = `
<div
  data-css-f3t1g9=""
>
  <table
    data-css-9fiqqd=""
    role="grid"
  >
    <thead
      data-css-1ts1rl3=""
    >
      <tr
        data-css-v3use0=""
        role="row"
      >
        <th
          data-css-1c7qoga=""
          role="columnheader"
          scope="col"
        >
          <label
            data-css-kn3wr0=""
            onClick={[Function]}
            onKeyDown={[Function]}
          >
            <div
              data-css-1ij5lym=""
            >
              <input
                data-css-6wu9td=""
                readOnly={true}
                type="checkbox"
              />
              <div
                data-css-1cfeqew=""
              >
                <svg
                  aria-label="Indeterminate Mark"
                  data-css-ey6g07=""
                  role="img"
                  version="1.1"
                  viewBox="0 0 16 16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    height="2"
                    width="10"
                    x="3"
                    y="7"
                  />
                </svg>
              </div>
            </div>
            <div
              data-css-ybwuvp=""
            />
          </label>
        </th>
        <th
          data-css-1c7qoga=""
          role="columnheader"
          scope="col"
        >
          First name
        </th>
        <th
          data-css-1c7qoga=""
          role="columnheader"
          scope="col"
        >
          Last name
        </th>
        <th
          data-css-1c7qoga=""
          role="columnheader"
          scope="col"
        >
          Email
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        data-css-v3use0=""
        role="row"
      >
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          <label
            data-css-kn3wr0=""
            onClick={[Function]}
            onKeyDown={[Function]}
          >
            <div
              data-css-1ij5lym=""
            >
              <input
                checked={false}
                data-css-6wu9td=""
                readOnly={true}
                type="checkbox"
              />
              <div
                data-css-1lxtjk6=""
              />
            </div>
            <div
              data-css-ybwuvp=""
            />
          </label>
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Ignacio
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Swift
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Hans.Marquardt@yahoo.com
        </td>
      </tr>
      <tr
        data-css-1ywjru9=""
        role="row"
      >
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          <label
            data-css-kn3wr0=""
            onClick={[Function]}
            onKeyDown={[Function]}
          >
            <div
              data-css-1ij5lym=""
            >
              <input
                checked={true}
                data-css-6wu9td=""
                readOnly={true}
                type="checkbox"
              />
              <div
                data-css-1cfeqew=""
              >
                <svg
                  aria-label="Checkmark"
                  data-css-ey6g07=""
                  role="img"
                  version="1.1"
                  viewBox="0 0 16 16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <polygon
                    points="6.89667458 13 2.62114014 8.72446556 4.12826603 7.21733967 6.89667458 9.97505938 12.871734 4 14.3788599 5.51781473"
                  />
                </svg>
              </div>
            </div>
            <div
              data-css-ybwuvp=""
            />
          </label>
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Edwina
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Predovic
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Damaris_Wilderman@hotmail.com
        </td>
      </tr>
      <tr
        data-css-v3use0=""
        role="row"
      >
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          <label
            data-css-kn3wr0=""
            onClick={[Function]}
            onKeyDown={[Function]}
          >
            <div
              data-css-1ij5lym=""
            >
              <input
                checked={false}
                data-css-6wu9td=""
                readOnly={true}
                type="checkbox"
              />
              <div
                data-css-1lxtjk6=""
              />
            </div>
            <div
              data-css-ybwuvp=""
            />
          </label>
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Devante
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Schuppe
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Kris_Parker@hotmail.com
        </td>
      </tr>
      <tr
        data-css-v3use0=""
        role="row"
      >
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          <label
            data-css-kn3wr0=""
            onClick={[Function]}
            onKeyDown={[Function]}
          >
            <div
              data-css-1ij5lym=""
            >
              <input
                checked={false}
                data-css-6wu9td=""
                readOnly={true}
                type="checkbox"
              />
              <div
                data-css-1lxtjk6=""
              />
            </div>
            <div
              data-css-ybwuvp=""
            />
          </label>
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Skylar
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Greenholt
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Gust.Hodkiewicz@hotmail.com
        </td>
      </tr>
      <tr
        data-css-1ywjru9=""
        role="row"
      >
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          <label
            data-css-kn3wr0=""
            onClick={[Function]}
            onKeyDown={[Function]}
          >
            <div
              data-css-1ij5lym=""
            >
              <input
                checked={true}
                data-css-6wu9td=""
                readOnly={true}
                type="checkbox"
              />
              <div
                data-css-1cfeqew=""
              >
                <svg
                  aria-label="Checkmark"
                  data-css-ey6g07=""
                  role="img"
                  version="1.1"
                  viewBox="0 0 16 16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <polygon
                    points="6.89667458 13 2.62114014 8.72446556 4.12826603 7.21733967 6.89667458 9.97505938 12.871734 4 14.3788599 5.51781473"
                  />
                </svg>
              </div>
            </div>
            <div
              data-css-ybwuvp=""
            />
          </label>
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Era
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Dooley
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Schuyler_MacGyver50@hotmail.com
        </td>
      </tr>
      <tr
        data-css-v3use0=""
        role="row"
      >
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          <label
            data-css-kn3wr0=""
            onClick={[Function]}
            onKeyDown={[Function]}
          >
            <div
              data-css-1ij5lym=""
            >
              <input
                checked={false}
                data-css-6wu9td=""
                readOnly={true}
                type="checkbox"
              />
              <div
                data-css-1lxtjk6=""
              />
            </div>
            <div
              data-css-ybwuvp=""
            />
          </label>
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Delmer
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Schaefer
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Mathilde2@hotmail.com
        </td>
      </tr>
      <tr
        data-css-v3use0=""
        role="row"
      >
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          <label
            data-css-kn3wr0=""
            onClick={[Function]}
            onKeyDown={[Function]}
          >
            <div
              data-css-1ij5lym=""
            >
              <input
                checked={false}
                data-css-6wu9td=""
                readOnly={true}
                type="checkbox"
              />
              <div
                data-css-1lxtjk6=""
              />
            </div>
            <div
              data-css-ybwuvp=""
            />
          </label>
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Liliane
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Heaney
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Fabian_Reichel@gmail.com
        </td>
      </tr>
      <tr
        data-css-1ywjru9=""
        role="row"
      >
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          <label
            data-css-kn3wr0=""
            onClick={[Function]}
            onKeyDown={[Function]}
          >
            <div
              data-css-1ij5lym=""
            >
              <input
                checked={true}
                data-css-6wu9td=""
                readOnly={true}
                type="checkbox"
              />
              <div
                data-css-1cfeqew=""
              >
                <svg
                  aria-label="Checkmark"
                  data-css-ey6g07=""
                  role="img"
                  version="1.1"
                  viewBox="0 0 16 16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <polygon
                    points="6.89667458 13 2.62114014 8.72446556 4.12826603 7.21733967 6.89667458 9.97505938 12.871734 4 14.3788599 5.51781473"
                  />
                </svg>
              </div>
            </div>
            <div
              data-css-ybwuvp=""
            />
          </label>
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Noemy
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Baumbach
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Jerrell.Hackett@hotmail.com
        </td>
      </tr>
      <tr
        data-css-v3use0=""
        role="row"
      >
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          <label
            data-css-kn3wr0=""
            onClick={[Function]}
            onKeyDown={[Function]}
          >
            <div
              data-css-1ij5lym=""
            >
              <input
                checked={false}
                data-css-6wu9td=""
                readOnly={true}
                type="checkbox"
              />
              <div
                data-css-1lxtjk6=""
              />
            </div>
            <div
              data-css-ybwuvp=""
            />
          </label>
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Alexandrea
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Haley
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Wilson.Jakubowski@gmail.com
        </td>
      </tr>
      <tr
        data-css-v3use0=""
        role="row"
      >
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          <label
            data-css-kn3wr0=""
            onClick={[Function]}
            onKeyDown={[Function]}
          >
            <div
              data-css-1ij5lym=""
            >
              <input
                checked={false}
                data-css-6wu9td=""
                readOnly={true}
                type="checkbox"
              />
              <div
                data-css-1lxtjk6=""
              />
            </div>
            <div
              data-css-ybwuvp=""
            />
          </label>
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Constance
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Kutch
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Coy87@hotmail.com
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots Components/Table Sorting 1`] = `
<div
  data-css-f3t1g9=""
>
  <table
    aria-labelledby="test-caption-id"
    data-css-9fiqqd=""
    role="grid"
  >
    <caption
      aria-live="polite"
      id="test-caption-id"
    >
      <div
        data-css-6wu9td=""
      >
        Mock table title: Not sorted
      </div>
    </caption>
    <thead
      data-css-1ts1rl3=""
    >
      <tr
        data-css-v3use0=""
        role="row"
      >
        <th
          aria-label="First name: No sort applied"
          aria-sort="none"
          data-css-m2a81v=""
          data-header-id="h-first-name"
          onClick={[Function]}
          onKeyUp={[Function]}
          role="columnheader"
          scope="col"
          tabIndex={0}
          title="First name"
        >
          First name
          <div
            aria-hidden={true}
            data-css-7dab2f=""
            data-css-yaqq33=""
          >
            <svg
              aria-label="sort icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M11.646 5.354a.5.5 0 01.708 0l4.292 4.292a.5.5 0 010 .708l-.703.703a.5.5 0 01-.707 0L12 7.83l-3.236 3.227a.5.5 0 01-.707 0l-.703-.703a.5.5 0 010-.708l4.292-4.292zm0 13.292l-4.292-4.292a.5.5 0 010-.708l.703-.703a.5.5 0 01.707 0L12 16.17l3.236-3.227a.5.5 0 01.707 0l.703.703a.5.5 0 010 .708l-4.292 4.292a.5.5 0 01-.708 0z"
              />
            </svg>
          </div>
        </th>
        <th
          aria-label="Last name: No sort applied"
          aria-sort="none"
          data-css-m2a81v=""
          data-header-id="h-last-name"
          onClick={[Function]}
          onKeyUp={[Function]}
          role="columnheader"
          scope="col"
          tabIndex={0}
          title="Last name"
        >
          Last name
          <div
            aria-hidden={true}
            data-css-7dab2f=""
            data-css-yaqq33=""
          >
            <svg
              aria-label="sort icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M11.646 5.354a.5.5 0 01.708 0l4.292 4.292a.5.5 0 010 .708l-.703.703a.5.5 0 01-.707 0L12 7.83l-3.236 3.227a.5.5 0 01-.707 0l-.703-.703a.5.5 0 010-.708l4.292-4.292zm0 13.292l-4.292-4.292a.5.5 0 010-.708l.703-.703a.5.5 0 01.707 0L12 16.17l3.236-3.227a.5.5 0 01.707 0l.703.703a.5.5 0 010 .708l-4.292 4.292a.5.5 0 01-.708 0z"
              />
            </svg>
          </div>
        </th>
        <th
          aria-label="Email: No sort applied"
          aria-sort="none"
          data-css-m2a81v=""
          data-header-id="h-email"
          onClick={[Function]}
          onKeyUp={[Function]}
          role="columnheader"
          scope="col"
          tabIndex={0}
          title="Email"
        >
          Email
          <div
            aria-hidden={true}
            data-css-7dab2f=""
            data-css-yaqq33=""
          >
            <svg
              aria-label="sort icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M11.646 5.354a.5.5 0 01.708 0l4.292 4.292a.5.5 0 010 .708l-.703.703a.5.5 0 01-.707 0L12 7.83l-3.236 3.227a.5.5 0 01-.707 0l-.703-.703a.5.5 0 010-.708l4.292-4.292zm0 13.292l-4.292-4.292a.5.5 0 010-.708l.703-.703a.5.5 0 01.707 0L12 16.17l3.236-3.227a.5.5 0 01.707 0l.703.703a.5.5 0 010 .708l-4.292 4.292a.5.5 0 01-.708 0z"
              />
            </svg>
          </div>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        data-css-v3use0=""
        role="row"
      >
        <th
          data-css-1c7qoga=""
          role="rowheader"
          scope="row"
          title="First name"
        >
          Jorge
        </th>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          O'Connell
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Silas.Will@gmail.com
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots Components/Table/layouts Horizontal Scroll 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "justifyContent": "center",
      "outline": "2px dashed pink",
      "padding": 20,
      "width": 500,
    }
  }
>
  <div
    data-css-1f123cr=""
    role="region"
    tabIndex={0}
  >
    <table
      data-css-9fiqqd=""
      role="grid"
    >
      <thead
        data-css-1ts1rl3=""
      >
        <tr
          data-css-v3use0=""
          role="row"
        >
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            <label
              data-css-kn3wr0=""
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <div
                data-css-1ij5lym=""
              >
                <input
                  data-css-6wu9td=""
                  readOnly={true}
                  type="checkbox"
                />
                <div
                  data-css-1lxtjk6=""
                />
              </div>
              <div
                data-css-ybwuvp=""
              />
            </label>
          </td>
          <th
            data-css-1c7qoga=""
            role="columnheader"
            scope="col"
            title="Full name"
          >
            Full name
          </th>
          <th
            data-css-1c7qoga=""
            role="columnheader"
            scope="col"
            title="First name"
          >
            First name
          </th>
          <th
            data-css-1c7qoga=""
            role="columnheader"
            scope="col"
            title="Last name"
          >
            Last name
          </th>
          <th
            data-css-1c7qoga=""
            role="columnheader"
            scope="col"
            title="Email"
          >
            Email
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          data-css-v3use0=""
          role="row"
        >
          <th
            data-css-1c7qoga=""
            role="columnheader"
            scope="row"
          >
            <label
              data-css-kn3wr0=""
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <div
                data-css-1ij5lym=""
              >
                <input
                  data-css-6wu9td=""
                  readOnly={true}
                  type="checkbox"
                />
                <div
                  data-css-1lxtjk6=""
                />
              </div>
              <div
                data-css-ybwuvp=""
              />
            </label>
          </th>
          <th
            data-css-1c7qoga=""
            role="columnheader"
            scope="row"
            title="Full name"
          >
            Delphine
             
            Huel
          </th>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Delphine
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Huel
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Forest_Lind@yahoo.com
          </td>
        </tr>
        <tr
          data-css-v3use0=""
          role="row"
        >
          <th
            data-css-1c7qoga=""
            role="columnheader"
            scope="row"
          >
            <label
              data-css-kn3wr0=""
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <div
                data-css-1ij5lym=""
              >
                <input
                  data-css-6wu9td=""
                  readOnly={true}
                  type="checkbox"
                />
                <div
                  data-css-1lxtjk6=""
                />
              </div>
              <div
                data-css-ybwuvp=""
              />
            </label>
          </th>
          <th
            data-css-1c7qoga=""
            role="columnheader"
            scope="row"
            title="Full name"
          >
            Brittany
             
            Hirthe
          </th>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Brittany
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Hirthe
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Efrain_Gerhold71@gmail.com
          </td>
        </tr>
        <tr
          data-css-v3use0=""
          role="row"
        >
          <th
            data-css-1c7qoga=""
            role="columnheader"
            scope="row"
          >
            <label
              data-css-kn3wr0=""
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <div
                data-css-1ij5lym=""
              >
                <input
                  data-css-6wu9td=""
                  readOnly={true}
                  type="checkbox"
                />
                <div
                  data-css-1lxtjk6=""
                />
              </div>
              <div
                data-css-ybwuvp=""
              />
            </label>
          </th>
          <th
            data-css-1c7qoga=""
            role="columnheader"
            scope="row"
            title="Full name"
          >
            Geovany
             
            Franecki
          </th>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Geovany
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Franecki
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Nathanael.Wolff9@hotmail.com
          </td>
        </tr>
        <tr
          data-css-v3use0=""
          role="row"
        >
          <th
            data-css-1c7qoga=""
            role="columnheader"
            scope="row"
          >
            <label
              data-css-kn3wr0=""
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <div
                data-css-1ij5lym=""
              >
                <input
                  data-css-6wu9td=""
                  readOnly={true}
                  type="checkbox"
                />
                <div
                  data-css-1lxtjk6=""
                />
              </div>
              <div
                data-css-ybwuvp=""
              />
            </label>
          </th>
          <th
            data-css-1c7qoga=""
            role="columnheader"
            scope="row"
            title="Full name"
          >
            Ena
             
            Boyle
          </th>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Ena
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Boyle
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Luna.Christiansen@gmail.com
          </td>
        </tr>
        <tr
          data-css-v3use0=""
          role="row"
        >
          <th
            data-css-1c7qoga=""
            role="columnheader"
            scope="row"
          >
            <label
              data-css-kn3wr0=""
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <div
                data-css-1ij5lym=""
              >
                <input
                  data-css-6wu9td=""
                  readOnly={true}
                  type="checkbox"
                />
                <div
                  data-css-1lxtjk6=""
                />
              </div>
              <div
                data-css-ybwuvp=""
              />
            </label>
          </th>
          <th
            data-css-1c7qoga=""
            role="columnheader"
            scope="row"
            title="Full name"
          >
            Emil
             
            Willms
          </th>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Emil
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Willms
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Lura_Pouros95@gmail.com
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Storyshots Components/Table/layouts Sticky Column And Row Headers 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": 500,
      "justifyContent": "center",
      "outline": "2px dashed pink",
      "padding": 20,
      "width": 500,
    }
  }
>
  <div
    data-css-1f123cr=""
    role="region"
    tabIndex={0}
  >
    <table
      data-css-9fiqqd=""
      role="grid"
    >
      <thead
        data-css-1ts1rl3=""
      >
        <tr
          data-css-v3use0=""
          role="row"
        >
          <th
            data-css-1ozkkps=""
            role="columnheader"
            scope="col"
            style={
              Object {
                "width": 1,
              }
            }
            title="Selection"
          >
            <label
              data-css-kn3wr0=""
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <div
                data-css-1ij5lym=""
              >
                <input
                  data-css-6wu9td=""
                  readOnly={true}
                  type="checkbox"
                />
                <div
                  data-css-1lxtjk6=""
                />
              </div>
              <div
                data-css-ybwuvp=""
              />
            </label>
          </th>
          <th
            data-css-1ozkkps=""
            role="columnheader"
            scope="col"
          >
            Full name
          </th>
          <th
            data-css-1ozkkps=""
            role="columnheader"
            scope="col"
          >
            First name
          </th>
          <th
            data-css-1ozkkps=""
            role="columnheader"
            scope="col"
          >
            Last name
          </th>
          <th
            data-css-1ozkkps=""
            role="columnheader"
            scope="col"
          >
            Email
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          data-css-v3use0=""
          role="row"
        >
          <th
            data-css-1ozkkps=""
            role="rowheader"
            scope="row"
          >
            <label
              data-css-kn3wr0=""
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <div
                data-css-1ij5lym=""
              >
                <input
                  data-css-6wu9td=""
                  readOnly={true}
                  type="checkbox"
                />
                <div
                  data-css-1lxtjk6=""
                />
              </div>
              <div
                data-css-ybwuvp=""
              />
            </label>
          </th>
          <th
            data-css-1c7qoga=""
            role="rowheader"
            scope="row"
            title="Full name"
          >
            Eric
             
            Gerlach
          </th>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Eric
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Gerlach
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Earnest_Wiza@hotmail.com
          </td>
        </tr>
        <tr
          data-css-v3use0=""
          role="row"
        >
          <th
            data-css-1ozkkps=""
            role="rowheader"
            scope="row"
          >
            <label
              data-css-kn3wr0=""
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <div
                data-css-1ij5lym=""
              >
                <input
                  data-css-6wu9td=""
                  readOnly={true}
                  type="checkbox"
                />
                <div
                  data-css-1lxtjk6=""
                />
              </div>
              <div
                data-css-ybwuvp=""
              />
            </label>
          </th>
          <th
            data-css-1c7qoga=""
            role="rowheader"
            scope="row"
            title="Full name"
          >
            Amber
             
            DuBuque
          </th>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Amber
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            DuBuque
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Adam.Aufderhar@hotmail.com
          </td>
        </tr>
        <tr
          data-css-v3use0=""
          role="row"
        >
          <th
            data-css-1ozkkps=""
            role="rowheader"
            scope="row"
          >
            <label
              data-css-kn3wr0=""
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <div
                data-css-1ij5lym=""
              >
                <input
                  data-css-6wu9td=""
                  readOnly={true}
                  type="checkbox"
                />
                <div
                  data-css-1lxtjk6=""
                />
              </div>
              <div
                data-css-ybwuvp=""
              />
            </label>
          </th>
          <th
            data-css-1c7qoga=""
            role="rowheader"
            scope="row"
            title="Full name"
          >
            Merritt
             
            Kohler
          </th>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Merritt
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Kohler
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Junius.Torphy@hotmail.com
          </td>
        </tr>
        <tr
          data-css-v3use0=""
          role="row"
        >
          <th
            data-css-1ozkkps=""
            role="rowheader"
            scope="row"
          >
            <label
              data-css-kn3wr0=""
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <div
                data-css-1ij5lym=""
              >
                <input
                  data-css-6wu9td=""
                  readOnly={true}
                  type="checkbox"
                />
                <div
                  data-css-1lxtjk6=""
                />
              </div>
              <div
                data-css-ybwuvp=""
              />
            </label>
          </th>
          <th
            data-css-1c7qoga=""
            role="rowheader"
            scope="row"
            title="Full name"
          >
            Estrella
             
            Green
          </th>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Estrella
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Green
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Gerhard_Spencer@yahoo.com
          </td>
        </tr>
        <tr
          data-css-v3use0=""
          role="row"
        >
          <th
            data-css-1ozkkps=""
            role="rowheader"
            scope="row"
          >
            <label
              data-css-kn3wr0=""
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <div
                data-css-1ij5lym=""
              >
                <input
                  data-css-6wu9td=""
                  readOnly={true}
                  type="checkbox"
                />
                <div
                  data-css-1lxtjk6=""
                />
              </div>
              <div
                data-css-ybwuvp=""
              />
            </label>
          </th>
          <th
            data-css-1c7qoga=""
            role="rowheader"
            scope="row"
            title="Full name"
          >
            Troy
             
            Grady
          </th>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Troy
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Grady
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Aliza.Heller@hotmail.com
          </td>
        </tr>
        <tr
          data-css-v3use0=""
          role="row"
        >
          <th
            data-css-1ozkkps=""
            role="rowheader"
            scope="row"
          >
            <label
              data-css-kn3wr0=""
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <div
                data-css-1ij5lym=""
              >
                <input
                  data-css-6wu9td=""
                  readOnly={true}
                  type="checkbox"
                />
                <div
                  data-css-1lxtjk6=""
                />
              </div>
              <div
                data-css-ybwuvp=""
              />
            </label>
          </th>
          <th
            data-css-1c7qoga=""
            role="rowheader"
            scope="row"
            title="Full name"
          >
            Nona
             
            Bergstrom
          </th>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Nona
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Bergstrom
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Adelbert50@yahoo.com
          </td>
        </tr>
        <tr
          data-css-v3use0=""
          role="row"
        >
          <th
            data-css-1ozkkps=""
            role="rowheader"
            scope="row"
          >
            <label
              data-css-kn3wr0=""
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <div
                data-css-1ij5lym=""
              >
                <input
                  data-css-6wu9td=""
                  readOnly={true}
                  type="checkbox"
                />
                <div
                  data-css-1lxtjk6=""
                />
              </div>
              <div
                data-css-ybwuvp=""
              />
            </label>
          </th>
          <th
            data-css-1c7qoga=""
            role="rowheader"
            scope="row"
            title="Full name"
          >
            Brown
             
            Schuster
          </th>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Brown
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Schuster
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Caterina18@hotmail.com
          </td>
        </tr>
        <tr
          data-css-v3use0=""
          role="row"
        >
          <th
            data-css-1ozkkps=""
            role="rowheader"
            scope="row"
          >
            <label
              data-css-kn3wr0=""
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <div
                data-css-1ij5lym=""
              >
                <input
                  data-css-6wu9td=""
                  readOnly={true}
                  type="checkbox"
                />
                <div
                  data-css-1lxtjk6=""
                />
              </div>
              <div
                data-css-ybwuvp=""
              />
            </label>
          </th>
          <th
            data-css-1c7qoga=""
            role="rowheader"
            scope="row"
            title="Full name"
          >
            Neal
             
            Rath
          </th>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Neal
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Rath
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Name_Marquardt58@hotmail.com
          </td>
        </tr>
        <tr
          data-css-v3use0=""
          role="row"
        >
          <th
            data-css-1ozkkps=""
            role="rowheader"
            scope="row"
          >
            <label
              data-css-kn3wr0=""
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <div
                data-css-1ij5lym=""
              >
                <input
                  data-css-6wu9td=""
                  readOnly={true}
                  type="checkbox"
                />
                <div
                  data-css-1lxtjk6=""
                />
              </div>
              <div
                data-css-ybwuvp=""
              />
            </label>
          </th>
          <th
            data-css-1c7qoga=""
            role="rowheader"
            scope="row"
            title="Full name"
          >
            Electa
             
            Schoen
          </th>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Electa
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Schoen
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Vincenza.Gleason78@gmail.com
          </td>
        </tr>
        <tr
          data-css-v3use0=""
          role="row"
        >
          <th
            data-css-1ozkkps=""
            role="rowheader"
            scope="row"
          >
            <label
              data-css-kn3wr0=""
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <div
                data-css-1ij5lym=""
              >
                <input
                  data-css-6wu9td=""
                  readOnly={true}
                  type="checkbox"
                />
                <div
                  data-css-1lxtjk6=""
                />
              </div>
              <div
                data-css-ybwuvp=""
              />
            </label>
          </th>
          <th
            data-css-1c7qoga=""
            role="rowheader"
            scope="row"
            title="Full name"
          >
            Forrest
             
            Farrell
          </th>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Forrest
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Farrell
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Cortez56@hotmail.com
          </td>
        </tr>
        <tr
          data-css-v3use0=""
          role="row"
        >
          <th
            data-css-1ozkkps=""
            role="rowheader"
            scope="row"
          >
            <label
              data-css-kn3wr0=""
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <div
                data-css-1ij5lym=""
              >
                <input
                  data-css-6wu9td=""
                  readOnly={true}
                  type="checkbox"
                />
                <div
                  data-css-1lxtjk6=""
                />
              </div>
              <div
                data-css-ybwuvp=""
              />
            </label>
          </th>
          <th
            data-css-1c7qoga=""
            role="rowheader"
            scope="row"
            title="Full name"
          >
            Robert
             
            Connelly
          </th>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Robert
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Connelly
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Rafaela_Grimes@hotmail.com
          </td>
        </tr>
        <tr
          data-css-v3use0=""
          role="row"
        >
          <th
            data-css-1ozkkps=""
            role="rowheader"
            scope="row"
          >
            <label
              data-css-kn3wr0=""
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <div
                data-css-1ij5lym=""
              >
                <input
                  data-css-6wu9td=""
                  readOnly={true}
                  type="checkbox"
                />
                <div
                  data-css-1lxtjk6=""
                />
              </div>
              <div
                data-css-ybwuvp=""
              />
            </label>
          </th>
          <th
            data-css-1c7qoga=""
            role="rowheader"
            scope="row"
            title="Full name"
          >
            Benedict
             
            Dibbert
          </th>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Benedict
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Dibbert
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Elton73@gmail.com
          </td>
        </tr>
        <tr
          data-css-v3use0=""
          role="row"
        >
          <th
            data-css-1ozkkps=""
            role="rowheader"
            scope="row"
          >
            <label
              data-css-kn3wr0=""
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <div
                data-css-1ij5lym=""
              >
                <input
                  data-css-6wu9td=""
                  readOnly={true}
                  type="checkbox"
                />
                <div
                  data-css-1lxtjk6=""
                />
              </div>
              <div
                data-css-ybwuvp=""
              />
            </label>
          </th>
          <th
            data-css-1c7qoga=""
            role="rowheader"
            scope="row"
            title="Full name"
          >
            Kristopher
             
            Hayes
          </th>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Kristopher
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Hayes
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Gloria_Moen@hotmail.com
          </td>
        </tr>
        <tr
          data-css-v3use0=""
          role="row"
        >
          <th
            data-css-1ozkkps=""
            role="rowheader"
            scope="row"
          >
            <label
              data-css-kn3wr0=""
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <div
                data-css-1ij5lym=""
              >
                <input
                  data-css-6wu9td=""
                  readOnly={true}
                  type="checkbox"
                />
                <div
                  data-css-1lxtjk6=""
                />
              </div>
              <div
                data-css-ybwuvp=""
              />
            </label>
          </th>
          <th
            data-css-1c7qoga=""
            role="rowheader"
            scope="row"
            title="Full name"
          >
            Camden
             
            Kutch
          </th>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Camden
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Kutch
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Eleanora_Wolff47@yahoo.com
          </td>
        </tr>
        <tr
          data-css-v3use0=""
          role="row"
        >
          <th
            data-css-1ozkkps=""
            role="rowheader"
            scope="row"
          >
            <label
              data-css-kn3wr0=""
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <div
                data-css-1ij5lym=""
              >
                <input
                  data-css-6wu9td=""
                  readOnly={true}
                  type="checkbox"
                />
                <div
                  data-css-1lxtjk6=""
                />
              </div>
              <div
                data-css-ybwuvp=""
              />
            </label>
          </th>
          <th
            data-css-1c7qoga=""
            role="rowheader"
            scope="row"
            title="Full name"
          >
            Abdul
             
            Rowe
          </th>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Abdul
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Rowe
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Mae.Tremblay32@hotmail.com
          </td>
        </tr>
        <tr
          data-css-v3use0=""
          role="row"
        >
          <th
            data-css-1ozkkps=""
            role="rowheader"
            scope="row"
          >
            <label
              data-css-kn3wr0=""
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <div
                data-css-1ij5lym=""
              >
                <input
                  data-css-6wu9td=""
                  readOnly={true}
                  type="checkbox"
                />
                <div
                  data-css-1lxtjk6=""
                />
              </div>
              <div
                data-css-ybwuvp=""
              />
            </label>
          </th>
          <th
            data-css-1c7qoga=""
            role="rowheader"
            scope="row"
            title="Full name"
          >
            Dagmar
             
            VonRueden
          </th>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Dagmar
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            VonRueden
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Virginie_Wunsch@hotmail.com
          </td>
        </tr>
        <tr
          data-css-v3use0=""
          role="row"
        >
          <th
            data-css-1ozkkps=""
            role="rowheader"
            scope="row"
          >
            <label
              data-css-kn3wr0=""
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <div
                data-css-1ij5lym=""
              >
                <input
                  data-css-6wu9td=""
                  readOnly={true}
                  type="checkbox"
                />
                <div
                  data-css-1lxtjk6=""
                />
              </div>
              <div
                data-css-ybwuvp=""
              />
            </label>
          </th>
          <th
            data-css-1c7qoga=""
            role="rowheader"
            scope="row"
            title="Full name"
          >
            Maryse
             
            Moen
          </th>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Maryse
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Moen
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Jodie.Nitzsche@gmail.com
          </td>
        </tr>
        <tr
          data-css-v3use0=""
          role="row"
        >
          <th
            data-css-1ozkkps=""
            role="rowheader"
            scope="row"
          >
            <label
              data-css-kn3wr0=""
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <div
                data-css-1ij5lym=""
              >
                <input
                  data-css-6wu9td=""
                  readOnly={true}
                  type="checkbox"
                />
                <div
                  data-css-1lxtjk6=""
                />
              </div>
              <div
                data-css-ybwuvp=""
              />
            </label>
          </th>
          <th
            data-css-1c7qoga=""
            role="rowheader"
            scope="row"
            title="Full name"
          >
            Deonte
             
            Heaney
          </th>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Deonte
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Heaney
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Adolf_Klein25@yahoo.com
          </td>
        </tr>
        <tr
          data-css-v3use0=""
          role="row"
        >
          <th
            data-css-1ozkkps=""
            role="rowheader"
            scope="row"
          >
            <label
              data-css-kn3wr0=""
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <div
                data-css-1ij5lym=""
              >
                <input
                  data-css-6wu9td=""
                  readOnly={true}
                  type="checkbox"
                />
                <div
                  data-css-1lxtjk6=""
                />
              </div>
              <div
                data-css-ybwuvp=""
              />
            </label>
          </th>
          <th
            data-css-1c7qoga=""
            role="rowheader"
            scope="row"
            title="Full name"
          >
            Arvilla
             
            Quigley
          </th>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Arvilla
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Quigley
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Alexandre87@yahoo.com
          </td>
        </tr>
        <tr
          data-css-v3use0=""
          role="row"
        >
          <th
            data-css-1ozkkps=""
            role="rowheader"
            scope="row"
          >
            <label
              data-css-kn3wr0=""
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <div
                data-css-1ij5lym=""
              >
                <input
                  data-css-6wu9td=""
                  readOnly={true}
                  type="checkbox"
                />
                <div
                  data-css-1lxtjk6=""
                />
              </div>
              <div
                data-css-ybwuvp=""
              />
            </label>
          </th>
          <th
            data-css-1c7qoga=""
            role="rowheader"
            scope="row"
            title="Full name"
          >
            Eldon
             
            Pouros
          </th>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Eldon
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Pouros
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Danielle76@gmail.com
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Storyshots Components/Table/layouts Sticky Column Header 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "height": 500,
      "justifyContent": "center",
      "outline": "2px dashed pink",
      "padding": 20,
    }
  }
>
  <div
    data-css-1f123cr=""
    role="region"
    tabIndex={0}
  >
    <table
      data-css-9fiqqd=""
      role="grid"
    >
      <thead
        data-css-1ts1rl3=""
      >
        <tr
          data-css-v3use0=""
          role="row"
        >
          <th
            data-css-1ozkkps=""
            role="columnheader"
            scope="col"
          >
            Full name
          </th>
          <th
            data-css-1ozkkps=""
            role="columnheader"
            scope="col"
          >
            First name
          </th>
          <th
            data-css-1ozkkps=""
            role="columnheader"
            scope="col"
          >
            Last name
          </th>
          <th
            data-css-1ozkkps=""
            role="columnheader"
            scope="col"
          >
            Email
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          data-css-v3use0=""
          role="row"
        >
          <th
            data-css-1c7qoga=""
            role="rowheader"
            scope="row"
          >
            Monique
             
            Reilly
          </th>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Monique
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Reilly
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Rhoda_Botsford43@gmail.com
          </td>
        </tr>
        <tr
          data-css-v3use0=""
          role="row"
        >
          <th
            data-css-1c7qoga=""
            role="rowheader"
            scope="row"
          >
            Araceli
             
            Huels
          </th>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Araceli
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Huels
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Hailey33@hotmail.com
          </td>
        </tr>
        <tr
          data-css-v3use0=""
          role="row"
        >
          <th
            data-css-1c7qoga=""
            role="rowheader"
            scope="row"
          >
            Nathan
             
            Becker
          </th>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Nathan
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Becker
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Thad33@yahoo.com
          </td>
        </tr>
        <tr
          data-css-v3use0=""
          role="row"
        >
          <th
            data-css-1c7qoga=""
            role="rowheader"
            scope="row"
          >
            Maximillian
             
            McKenzie
          </th>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Maximillian
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            McKenzie
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Julius87@hotmail.com
          </td>
        </tr>
        <tr
          data-css-v3use0=""
          role="row"
        >
          <th
            data-css-1c7qoga=""
            role="rowheader"
            scope="row"
          >
            Brad
             
            Lang
          </th>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Brad
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Lang
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Flavio.Morar82@gmail.com
          </td>
        </tr>
        <tr
          data-css-v3use0=""
          role="row"
        >
          <th
            data-css-1c7qoga=""
            role="rowheader"
            scope="row"
          >
            Frederick
             
            Lindgren
          </th>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Frederick
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Lindgren
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Jaycee_Rice@yahoo.com
          </td>
        </tr>
        <tr
          data-css-v3use0=""
          role="row"
        >
          <th
            data-css-1c7qoga=""
            role="rowheader"
            scope="row"
          >
            Gerard
             
            Frami
          </th>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Gerard
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Frami
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Cicero_Hartmann90@gmail.com
          </td>
        </tr>
        <tr
          data-css-v3use0=""
          role="row"
        >
          <th
            data-css-1c7qoga=""
            role="rowheader"
            scope="row"
          >
            Virgie
             
            Satterfield
          </th>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Virgie
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Satterfield
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Ron54@hotmail.com
          </td>
        </tr>
        <tr
          data-css-v3use0=""
          role="row"
        >
          <th
            data-css-1c7qoga=""
            role="rowheader"
            scope="row"
          >
            Eino
             
            Homenick
          </th>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Eino
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Homenick
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Delta_Yost13@hotmail.com
          </td>
        </tr>
        <tr
          data-css-v3use0=""
          role="row"
        >
          <th
            data-css-1c7qoga=""
            role="rowheader"
            scope="row"
          >
            Luella
             
            Kirlin
          </th>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Luella
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Kirlin
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Addison_Bins@hotmail.com
          </td>
        </tr>
        <tr
          data-css-v3use0=""
          role="row"
        >
          <th
            data-css-1c7qoga=""
            role="rowheader"
            scope="row"
          >
            Otilia
             
            Collins
          </th>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Otilia
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Collins
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Seamus.Hettinger46@yahoo.com
          </td>
        </tr>
        <tr
          data-css-v3use0=""
          role="row"
        >
          <th
            data-css-1c7qoga=""
            role="rowheader"
            scope="row"
          >
            Baby
             
            Mayert
          </th>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Baby
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Mayert
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Karianne24@yahoo.com
          </td>
        </tr>
        <tr
          data-css-v3use0=""
          role="row"
        >
          <th
            data-css-1c7qoga=""
            role="rowheader"
            scope="row"
          >
            Aisha
             
            VonRueden
          </th>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Aisha
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            VonRueden
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Mitchel.Parker@gmail.com
          </td>
        </tr>
        <tr
          data-css-v3use0=""
          role="row"
        >
          <th
            data-css-1c7qoga=""
            role="rowheader"
            scope="row"
          >
            Lynn
             
            Runolfsdottir
          </th>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Lynn
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Runolfsdottir
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Vivienne.Jenkins@hotmail.com
          </td>
        </tr>
        <tr
          data-css-v3use0=""
          role="row"
        >
          <th
            data-css-1c7qoga=""
            role="rowheader"
            scope="row"
          >
            Viva
             
            Sipes
          </th>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Viva
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Sipes
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Haven2@hotmail.com
          </td>
        </tr>
        <tr
          data-css-v3use0=""
          role="row"
        >
          <th
            data-css-1c7qoga=""
            role="rowheader"
            scope="row"
          >
            Hollis
             
            Johns
          </th>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Hollis
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Johns
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Serena_Hamill@gmail.com
          </td>
        </tr>
        <tr
          data-css-v3use0=""
          role="row"
        >
          <th
            data-css-1c7qoga=""
            role="rowheader"
            scope="row"
          >
            Tianna
             
            Gislason
          </th>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Tianna
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Gislason
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Leone.Turcotte67@yahoo.com
          </td>
        </tr>
        <tr
          data-css-v3use0=""
          role="row"
        >
          <th
            data-css-1c7qoga=""
            role="rowheader"
            scope="row"
          >
            Elza
             
            Hegmann
          </th>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Elza
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Hegmann
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Leila_Nolan94@hotmail.com
          </td>
        </tr>
        <tr
          data-css-v3use0=""
          role="row"
        >
          <th
            data-css-1c7qoga=""
            role="rowheader"
            scope="row"
          >
            Virgie
             
            Fay
          </th>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Virgie
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Fay
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Annabell.Stracke71@gmail.com
          </td>
        </tr>
        <tr
          data-css-v3use0=""
          role="row"
        >
          <th
            data-css-1c7qoga=""
            role="rowheader"
            scope="row"
          >
            Lempi
             
            Emmerich
          </th>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Lempi
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Emmerich
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Nicola46@gmail.com
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Storyshots Components/Table/layouts Sticky Row Header 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "justifyContent": "center",
      "outline": "2px dashed pink",
      "padding": 20,
      "width": 500,
    }
  }
>
  <div
    data-css-1f123cr=""
    role="region"
    tabIndex={0}
  >
    <table
      data-css-9fiqqd=""
      role="grid"
    >
      <thead
        data-css-1ts1rl3=""
      >
        <tr
          data-css-v3use0=""
          role="row"
        >
          <th
            data-css-1ozkkps=""
            role="columnheader"
            scope="row"
            style={
              Object {
                "width": 1,
              }
            }
            title="Selection"
          >
            <label
              data-css-kn3wr0=""
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <div
                data-css-1ij5lym=""
              >
                <input
                  data-css-6wu9td=""
                  readOnly={true}
                  type="checkbox"
                />
                <div
                  data-css-1lxtjk6=""
                />
              </div>
              <div
                data-css-ybwuvp=""
              />
            </label>
          </th>
          <th
            data-css-1c7qoga=""
            role="columnheader"
            scope="row"
          >
            Full name
          </th>
          <th
            data-css-1c7qoga=""
            role="columnheader"
            scope="row"
          >
            First name
          </th>
          <th
            data-css-1c7qoga=""
            role="columnheader"
            scope="row"
          >
            Last name
          </th>
          <th
            data-css-1c7qoga=""
            role="columnheader"
            scope="row"
          >
            Email
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          data-css-v3use0=""
          role="row"
        >
          <th
            data-css-1ozkkps=""
            role="rowheader"
            scope="row"
          >
            <label
              data-css-kn3wr0=""
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <div
                data-css-1ij5lym=""
              >
                <input
                  data-css-6wu9td=""
                  readOnly={true}
                  type="checkbox"
                />
                <div
                  data-css-1lxtjk6=""
                />
              </div>
              <div
                data-css-ybwuvp=""
              />
            </label>
          </th>
          <th
            data-css-1c7qoga=""
            role="rowheader"
            scope="row"
          >
            Annabelle
             
            Stokes
          </th>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Annabelle
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Stokes
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Zackery.Lind@hotmail.com
          </td>
        </tr>
        <tr
          data-css-v3use0=""
          role="row"
        >
          <th
            data-css-1ozkkps=""
            role="rowheader"
            scope="row"
          >
            <label
              data-css-kn3wr0=""
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <div
                data-css-1ij5lym=""
              >
                <input
                  data-css-6wu9td=""
                  readOnly={true}
                  type="checkbox"
                />
                <div
                  data-css-1lxtjk6=""
                />
              </div>
              <div
                data-css-ybwuvp=""
              />
            </label>
          </th>
          <th
            data-css-1c7qoga=""
            role="rowheader"
            scope="row"
          >
            Donna
             
            Morar
          </th>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Donna
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Morar
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Quinton.Rippin@yahoo.com
          </td>
        </tr>
        <tr
          data-css-v3use0=""
          role="row"
        >
          <th
            data-css-1ozkkps=""
            role="rowheader"
            scope="row"
          >
            <label
              data-css-kn3wr0=""
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <div
                data-css-1ij5lym=""
              >
                <input
                  data-css-6wu9td=""
                  readOnly={true}
                  type="checkbox"
                />
                <div
                  data-css-1lxtjk6=""
                />
              </div>
              <div
                data-css-ybwuvp=""
              />
            </label>
          </th>
          <th
            data-css-1c7qoga=""
            role="rowheader"
            scope="row"
          >
            Kiana
             
            Grimes
          </th>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Kiana
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Grimes
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Wilhelm_Batz@hotmail.com
          </td>
        </tr>
        <tr
          data-css-v3use0=""
          role="row"
        >
          <th
            data-css-1ozkkps=""
            role="rowheader"
            scope="row"
          >
            <label
              data-css-kn3wr0=""
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <div
                data-css-1ij5lym=""
              >
                <input
                  data-css-6wu9td=""
                  readOnly={true}
                  type="checkbox"
                />
                <div
                  data-css-1lxtjk6=""
                />
              </div>
              <div
                data-css-ybwuvp=""
              />
            </label>
          </th>
          <th
            data-css-1c7qoga=""
            role="rowheader"
            scope="row"
          >
            Kaelyn
             
            Corwin
          </th>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Kaelyn
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Corwin
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Kiley_Sipes17@gmail.com
          </td>
        </tr>
        <tr
          data-css-v3use0=""
          role="row"
        >
          <th
            data-css-1ozkkps=""
            role="rowheader"
            scope="row"
          >
            <label
              data-css-kn3wr0=""
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <div
                data-css-1ij5lym=""
              >
                <input
                  data-css-6wu9td=""
                  readOnly={true}
                  type="checkbox"
                />
                <div
                  data-css-1lxtjk6=""
                />
              </div>
              <div
                data-css-ybwuvp=""
              />
            </label>
          </th>
          <th
            data-css-1c7qoga=""
            role="rowheader"
            scope="row"
          >
            Jadon
             
            Koch
          </th>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Jadon
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Koch
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Ned73@gmail.com
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
